# public/files/swagger/swagger.yaml
@@ -94,6 +94,73 @@ paths:
           description: "successful operation"
           schema:
             "$ref": "#/definitions/ApiResponse"
+  /tours:
+    get:
+      tags:
+        - "tour"
+      summary: "List tours"
+      description: ""
+      operationId: "tours-index"
+      consumes:
+        - "application/x-www-form-urlencoded"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "page"
+          in: "query"
+          description: "Page"
+          required: false
+          type: "integer"
+      security:
+        - JWT: []
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            "$ref": "#/definitions/ApiResponse"
+    post:
+      tags:
+        - "tour"
+      summary: "Add tours"
+      description: ""
+      operationId: "tours-store"
+      consumes:
+        - "application/x-www-form-urlencoded"
+      produces:
+        - "application/json"
+      parameters:
+        - name: "name"
+          in: "formData"
+          description: "Tour name"
+          required: true
+          type: "string"
+        - name: "description"
+          in: "formData"
+          description: "Tour description"
+          required: true
+          type: "string"
+        - name: "location"
+          in: "formData"
+          description: "Tour location"
+          required: true
+          type: "string"
+        - name: "starts_at"
+          in: "formData"
+          description: "Tour start date(YYYY-MM-DD H:i:s)"
+          required: true
+          type: "string"
+        - name: "ends_at"
+          in: "formData"
+          description: "Tour end date(YYYY-MM-DD H:i:s)"
+          required: true
+          type: "string"
+      security:
+        - JWT: []
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            "$ref": "#/definitions/ApiResponse"
 definitions:
   ApiResponse:
     type: "object"
